.provarCaches/00D5f000005vwGkEAI/objects/rstkf__processgltxns__e.object
<CustomObject>
    <fields>
        <fullName>rstkf__creategltxns__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create GLTxns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn2ids__c</fullName>
        <label>GL Txn2 IDs</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxncount__c</fullName>
        <label>GL Txn Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnids__c</fullName>
        <label>GL Txn IDs</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__glyearid__c</fullName>
        <label>Fiscal Year</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__period__c</fullName>
        <label>Fiscal Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__processgltxns__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process GLTxn</label>
        <type>Checkbox</type>
    </fields>
    <label>Process GL Txns</label>
    <pluralLabel>Process GL Txns</pluralLabel>
</CustomObject>